# GhostKeeper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
backend/: main.py  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/ai/: client.py  prompts.py  schemas.py  tools.py
backend/app/api/: characters.py  chat.py  images.py  monsters.py  occupations.py  scenarios.py  sessions.py
backend/app/game/: dice.py  rules.py  stats.py
backend/app/models/: character.py  chat.py  memory.py  monster.py  session.py
backend/tests/: test_dice.py  test_prompts.py  test_rules.py  test_scenarios.py
docs/: Scenario_test1.md  ai_player_manual.md  frontend_guide.md  implementation_guide.md  implementation_log_phase1-3.md  improvement_guide.md  phase67_guide.md  requirements.md
frontend/: vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/character/: CharacterCreator.module.css  CharacterCreator.tsx  CharacterManager.module.css  CharacterManager.tsx
frontend/src/components/common/: StatBar.module.css  StatBar.tsx
frontend/src/components/game/: CharacterPortrait.module.css  CharacterPortrait.tsx  CharacterSheet.module.css  CharacterSheet.tsx  ChatArea.module.css  ChatArea.tsx  ChatInput.module.css  ChatInput.tsx  ChatMessage.module.css  ChatMessage.tsx  ChoiceButtons.module.css  ChoiceButtons.tsx  (+2 more)
frontend/src/hooks/: useChat.ts  useGame.ts  useSession.ts
frontend/src/types/: index.ts
scenarios/: haunted_library.json  schema.json
tasks/: lessons.md  todo.md
(+6 files in other folders)
