[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21",
    "fastapi>=0.133.1",
    "httpx>=0.28",
    "ollama>=0.6.1",
    "pydantic-settings>=2.13.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]
